# DictatorScript

./: .gitignore  CMakeLists.txt  DictatorScript_Proposal final version.docx  DictatorScript_Proposal.docx  README.md  sample-code.txt
.github/workflow/: initial-prompt.md
DictatorScript/examples/: hello_world.ds
DictatorScript/examples/multifile/: main.ds  utils.ds
DictatorScript/src/: main.cpp
DictatorScript/src/compiler/: CodeGenerator.cpp  CodeGenerator.h  Compiler.cpp  ErrorReporter.h  Lexer.h  Parser.cpp  Parser.h  (+2 more)
dictatorscript-vscode/: .vscodeignore  language-configuration.json  package-lock.json  package.json  tsconfig.json
dictatorscript-vscode/client/: tsconfig.tsbuildinfo
dictatorscript-vscode/server/: tsconfig.json  tsconfig.tsbuildinfo
dictatorscript-vscode/shared/: tsconfig.json  tsconfig.tsbuildinfo
dictatorscript-vscode/snippets/: dictatorscript.json
dictatorscript-vscode/src/: compilerIntegration.ts  extension.ts  hoverProvider.ts  languageData.ts  linter.ts
dictatorscript-vscode/syntaxes/: dictatorscript.tmLanguage.json
examples/: bindings_demo.ds  concurrency_demo.ds  fibonacci.ds  pointers_demo.ds  sample.ds
examples/multifile/: main.cpp  main.ds  test_chain.ds  test_chain_leaf.ds  test_chain_middle.ds  test_circular_a.ds  test_circular_b.ds  utils.ds
src/compiler/: ASTNode.cpp  ASTNode.h  CodeGenerator.cpp  CodeGenerator.h  Compiler.cpp  Compiler.h  ErrorReporter.cpp  Lexer.cpp  Parser.cpp  Parser.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.cpp  Token.h  TokenType.h
tests/: run_tests.ps1  test_features.ds
(+21 files in other folders)
